--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -8,21 +8,18 @@
 
 \documentclass[journal]{IEEEtran}
 
-\usepackage{indentfirst}
 \usepackage{graphicx}
-\usepackage{caption}
-\usepackage{subfigure}
-\usepackage{enumerate}
-\usepackage{epstopdf}
-\usepackage{csquotes}
-\usepackage{hyperref}
+\usepackage{indentfirst}
 \usepackage{cite}
 \usepackage{url}
+\usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{fixltx2e}
+\usepackage{caption}
+\usepackage{enumerate}
 \usepackage[flushleft]{threeparttable}
 \usepackage[super]{nth}
 
-\graphicspath{{figures/}}
 
 \begin{document}
 
@@ -44,7 +41,7 @@ I-Ju Liao\IEEEauthorrefmark{1}}
 
 \IEEEauthorblockA{
 \IEEEauthorrefmark{1}
-Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan}
+Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan} \\
 \IEEEauthorblockA{
 \IEEEauthorrefmark{2}
 Institute of Communication Engineering National Tsing Hua University, Hsinchu, Taiwan}
@@ -573,22 +570,22 @@ OneDrive            & 0.991255            & Trello            & 0.988889        
 gamerAnimad         & 0.985714            & Dropbox           & 0.985714           \\ \hline
 AmazonMusi          & 0.977461            & MEGAsync          & 0.968889           \\ \hline
 MEGAsync            & 0.968889            & BattleNet         & 0.967812           \\  \hline
-Udacity             & 0.966667            & Lity              & 0.966427            \\ \hline
-Tumblr              & 0.964624            & Asana             & 0.963492            \\ \hline
-Skype               & 0.963117            & Twitch            & 0.963117            \\ \hline
-TeamViewer          & 0.946667            & FileZilla         & 0.946429            \\ \hline
-Agoda               & 0.944764            & TripAdvisor       & 0.942075            \\  \hline
-Pinterest           & 0.936026            & BBCNews           & 0.931049            \\  \hline
-LINE                & 0.923904            & Slack             & 0.920985            \\ \hline
-Twitter             & 0.917906            & Youku             & 0.913925            \\ \hline
-Evernote            & 0.912381            & Snapchat          & 0.912221            \\ \hline
-Weibo               & 0.910872            & WeChat            & 0.906349            \\ \hline
-GoogleDrive         & 0.896612            & Trivago           & 0.895406             \\ \hline
-iTunes              & 0.890464            & Netflix           & 0.876234             \\ \hline
-Facebook            & 0.868641            & Telegram          & 0.862222             \\ \hline
-Airbnb              & 0.857029            & Spotify           & 0.856971             \\ \hline
-Instagram           & 0.833465            & TED               & 0.829277             \\ \hline
-Tmall               & 0.799747            & YouTube           & 0.713084             \\ \hline
+Udacity             & 0.966667            & Lity              & 0.966427           \\ \hline
+Tumblr              & 0.964624            & Asana             & 0.963492           \\ \hline
+Skype               & 0.963117            & Twitch            & 0.963117           \\ \hline
+TeamViewer          & 0.946667            & FileZilla         & 0.946429           \\ \hline
+Agoda               & 0.944764            & TripAdvisor       & 0.942075           \\  \hline
+Pinterest           & 0.936026            & BBCNews           & 0.931049           \\  \hline
+LINE                & 0.923904            & Slack             & 0.920985           \\ \hline
+Twitter             & 0.917906            & Youku             & 0.913925           \\ \hline
+Evernote            & 0.912381            & Snapchat          & 0.912221           \\ \hline
+Weibo               & 0.910872            & WeChat            & 0.906349           \\ \hline
+GoogleDrive         & 0.896612            & Trivago           & 0.895406           \\ \hline
+iTunes              & 0.890464            & Netflix           & 0.876234           \\ \hline
+Facebook            & 0.868641            & Telegram          & 0.862222           \\ \hline
+Airbnb              & 0.857029            & Spotify           & 0.856971           \\ \hline
+Instagram           & 0.833465            & TED               & 0.829277           \\ \hline
+Tmall               & 0.799747            & YouTube           & 0.713084           \\ \hline
 \end{tabular}
 \end{table}
 
@@ -635,8 +632,6 @@ When using our limitation function of application, we can guarantee the traffic 
 The proposed vCPE framework enables deploying NFVs as edge of network and these VNFs are implpemented with multiple flow table management model. In this way, the customers only need a SDN switch at local network, and some network functions that could not have been done by single table machanism are also resolved. The experimental results show that the framework provide performance in VNF compete over single table SDN application. The integration evaluation also show its flexibility to integrate with any bonus applicaion identification system, IDS or IPS.
 
 
-
-\newpage
 \bibliographystyle{ieeetr}
 \bibliography{paper}
 
