--- a/paper.bib
+++ b/paper.bib
@@ -384,7 +384,7 @@ year = {2013}
 
 @misc{onos,
   title = {{ONOS}},
-  Howpublished = {\url{http://onosproject.org/}},}
+  Howpublished = {\url{http://onosproject.org}},}
 
 @misc{pica8-switch,
   title = {{Pica8 OpenFlow-enabled switches}},
@@ -395,7 +395,7 @@ year = {2013}
   Howpublished = {\url{http://www.edge-core.com/productsKind.php?cls=1}},}
 @misc{lagopus-switch,
   title = {{Edge Core switches}},
-  Howpublished = {\url{http://www.lagopus.org/}},}
+  Howpublished = {\url{http://www.lagopus.org}},}
 
 @misc{hp-switch,
   title = {{HP OpenFlow-enabled switches}},
