--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -127,13 +127,13 @@ Fig. \ref{fig:desc_service_deployment} illustrates the service deployment model.
 
 
 \subsection{Architecture of the vCPE System}
-The architecture of the vCPE system is adapted from \cite{nfv2014-v111}, shown in Fig. \ref{fig:desc_vcpe_framework}, including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator.
+The architecture of the vCPE system is adapted from the NFV-MANO architectural framework in \cite{nfv2014-v111}, shown in Fig. \ref{fig:desc_vcpe_framework}, including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator.
 The Infrastructure Orchestrator, VNF Orchestrator and Cloud Database are web servers
 Each component is introduced in the subsection below.
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=3in]{./figures/desc_vcpe_framework}
+\includegraphics[width=3.5in]{./figures/desc_vcpe_framework}
 \caption{Architecture of the vCPE framework.}
 \label{fig:desc_vcpe_framework}
 \end{figure}
